--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-    <title>Harry Potter Characters</title>
-    <link rel="stylesheet" href="css/style.css"/>
     <link href="https://fonts.cdnfonts.com/css/supertea" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/adlam-display" rel="stylesheet">
-    <link rel="shortcut icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2F1000marcas.net%2Fhogwarts-logo%2F&psig=AOvVaw1-tF6XXRLHXMLkFSCIPExN&ust=1718133122510000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCIDD8uze0YYDFQAAAAAdAAAAABAf" type="image/x-icon">
+                
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <title>Paguina Principal</title>
 </head>
-  <body>
+<body>
     <div style="margin: 24px;"> 
       <nav class="nav navbar-light"
       style="background-color: rgb(142, 214, 205);">
@@ -52,45 +50,21 @@
          </div>
       </nav>
   </div>
-    <style>
-      body{
-          background-color: rgb(231, 143, 158);
-          font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-          margin: 5px;
-          padding: 0;
-      }
-      h1{
-          color: rgb(92, 38, 38);
-          text-shadow: rgb(209, 209, 14);
-          text-align: center;
-      }
-      p{
-        font-family: 'ADLaM Display', sans-serif;
-      }
-      input{
-        background-color: rgb(247, 167, 223);
-        font-family: cursive;
-        color: black;
-        border-color: rgb(177, 70, 177);
-        border-style: double;
-        box-shadow: 0 7px 20px rgb(206, 140, 236);
-      }
-      img{
-        box-shadow: 0 10px 50px rgb(219, 0, 164);
-        margin: 15px;
-        width: 20%;
-        margin-left: 50px;
-        border: 1px solid rgb(219, 0, 164);
-      }
+  <style>
+    body{
+      background-color: pink;
+    }
   </style>
-    <div class="container">
-      <h1>&#x2740;Harry Potter&#x2740;</h1>
-      <div id="searchWrapper">
-        <input type="text" name="searchBar" id="searchBar" placeholder="character"/>
-      </div>
-      <ul id="charactersList"></ul>
-    </div>
-
-    <script src="script.js"></script>
   </body>
+    <div class="jumbotron" style= "font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: #000; box-shadow: 0 10px 10px rgb(107, 31, 207);" >
+        <h1 class="display-4">Hello, Bienvenido!</h1>
+        <p class="lead">Esta es mi paguina personal para la materia de Desarrolla Aplicaciones que se ejecutan en el Servidor.</p>
+        <hr class="my-4">
+        <p>Me presento, mi nombre es Yuliana Lizbeth Ramirez Dominguez del grupo de 4B de la especialidad de Programacion del turno vespertino.</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </p>
+      </div>
+    
+</body>
 </html>
